# plgr1

cmt1/: .clang-format  .gitignore  CMakeLists.txt  cmt1.code-workspace  deps.h  main.cpp  skip-personal-settings.bat
cmt1/misc/: cmt1.cfg  skip-personal-settings.bat  skip-personal-settings.sh
cmt1/src/: appcfg.h  cfg.cpp  cfg.h  cfg2.h  deps.h  exstream.h  log.cpp  log.h  main.cpp  path.h
lot1/: CMakeLists.txt  main.cpp  sep.cpp  sep.h
